--- a/lab3/app/src/main/res/layout/activity_main.xml
+++ b/lab3/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
             android:ems="10"
             android:hint="Login"
             android:inputType="text"
+            android:text="admin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +29,7 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
+            android:text="admin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loginInput" />
